# WebGPUReconstruct

./: .gitignore  .gitmodules  LICENSE  README.md  build.py  configure.py
.github/actions/release/: action.yml
.github/actions/upload/: action.yml
.github/workflows/: builds.yml
capture/: manifest.json
capture/scripts/: background.js  content.js  save.js
code_generation/: chained_types.py  code_generation.py  commands.py  custom_types.py  enum_types.py  id_types.py  non_captured_types.py  primitive_types.py  string_type.py  struct_types.py  unsupported_type.py
docs/: BUILDING.md  CAPTURING.md  LIMITATIONS.md  REPLAYING.md
replay/: Adapter.cpp  Adapter.hpp  AndroidMain.cpp  CMakeLists.txt  Capture.cpp  Capture.hpp  Configuration.cpp  Configuration.hpp  Constants.hpp  Device.cpp  Device.hpp  Logging.cpp  Logging.hpp  SwapChain.cpp  SwapChain.hpp  TestApp.cpp  TestApp.hpp  Uint8Reader.cpp  Uint8Reader.hpp  WebGPU.hpp  Window.hpp  main.cpp
replay/Android/: settings.gradle
replay/Android/app/: build.gradle
replay/Android/app/src/main/: AndroidManifest.xml
replay/Android/app/src/main/java/net/chainsawkitten/webgpunativereplay/: MainActivity.java
replay/Android/app/src/main/res/values/: strings.xml  themes.xml
replay/Android/gradle/: libs.versions.toml
replay/Android/gradle/wrapper/: gradle-wrapper.properties
